[package]
name = "geotiff_agg"
version = "0.1.0"
edition = "2021"

[lib]
name = "geotiff_agg"
path = "src/lib.rs"

[[bin]]
name = "geotiff_agg"
path = "src/main.rs"

[dependencies]
gdal = { version = "0.19", features = ["bindgen"] }
rstar = "0.12"
rayon = "1.10"
csv = "1.3"
anyhow = "1.0"
indicatif = "0.17"

[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 1
